# VTB

./: README.md
initrd/: CMakeLists.txt  README.md
initrd/rootfs/: init  install_tdg.sh  install_vsock.sh
initrd/scripts/: build_socat.sh  build_zstd.sh  launch_vm.sh  pack_initrd.sh  prepare_rootfs_deps.sh  start_vsock_proxy.sh
initrd/src/: CMakeLists.txt  attestation_client.cc  attestation_server.cc  attestation_service.proto  utils.cc  utils.h
